# shoopy-energy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.rc  build.rs  docker-compose.yml
linux/: xmrig-energy
src/: address.rs  main.rs  miner.rs  parser.rs  state.rs  ui.rs
