[package]
name = "shoopy-energy"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
env = "1.0.1"
io = "0.0.2"
lazy_static = "1.5.0"
regex = "1.11.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase", "wincon"] }

[build-dependencies]


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[profile.release]
opt-level = "z"        # optimize for size (use "s" for a bit bigger but faster)
lto = "fat"             # enable Link Time Optimization
codegen-units = 1      # compile in a single unit, better optimization
strip = true           # strip symbols (Rust 1.68+)
panic = "abort"        # remove unwinding code
